--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -78,12 +78,11 @@
         height: 50vh;
     }
     .feature-list .img-feature{
-        width: 100%;
-        height: 400%;
+        width: 15%;
     }
     .feature-list .feature-text-container{
-        text-align: center;
-        color: rgba(0, 0, 0, 10);
+        text-align: left;
+        color: rgba(255, 255, 255, 10);
     }
     #footer-list{
         display: flex !important;
