--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -14,13 +14,13 @@
         position: absolute;
         text-align: center !important;
         font-size: 1.3rem !important;
-        top: -30rem !important;
+        top: -55vh !important;
         left: 3rem !important;
     }
     .carousel-main > :nth-child(2){
         position: absolute;
         font-size: .7rem !important;
-        top: -28rem !important;
+        top: -50vh !important;
         left: 3rem;
     }
     .carousel-main > :nth-child(3){
@@ -33,7 +33,7 @@
     .carousel-main > :nth-child(4){
         position: absolute;
         font-size: .7rem;
-        top: -25rem;
+        top: -40vh;
         left: 3rem !important;
     }    
 /* <------------------------------------------------------------------------> */
