MENAMBAHKAN FETCH DATA API DARI 'Itunes' DAN SEDIKIT FIXING BUG PADA CARD PAGE APP

--- a/styles/app-styles/mobile.css
+++ b/styles/app-styles/mobile.css
@@ -3,4 +3,10 @@
         display: flex !important;
         overflow: scroll !important;
     }
+    .card-slider{
+        overflow-x: visible;
+    }
+    .card-slider .card{
+        width: 50% !important;
+    }
 }
