--- a/styles/landing-page-styles/mobile.css
+++ b/styles/landing-page-styles/mobile.css
@@ -93,4 +93,7 @@
         display: flex !important;
         justify-content: center !important;
     }
+    button.gotoapp{
+        display: flex !important;
+    }
 }
